# routa

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  api-contract.yaml  convert-docs.js  docusaurus.config.js  drizzle-sqlite.config.ts  drizzle.config.ts  eslint.config.mjs  implementation_plan.md.resolved  next.config.ts  package-lock.json  package.json  readme.md  routa-desktop.md  sidebars.js  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude/: settings.local.json
.codex/: hooks.json
.github/: CODEOWNERS  dependabot.yml
.husky/: commit-msg  pre-commit  pre-push  prepare-commit-msg
.routa/: review-rules.md
.storybook/: main.ts  preview.tsx
architecture/: quantums.yaml
crates/feature-trace/: Cargo.toml
crates/feature-trace/src/: analyzer.rs  catalog.rs  error.rs  lib.rs
crates/routa-rpc/: Cargo.toml
crates/routa-rpc/src/: lib.rs
crates/trace-parser/: Cargo.toml
crates/trace-parser/src/: analyzer.rs  catalog.rs  lib.rs  transcript_discovery.rs  transcript_parser.rs
docker/: Dockerfile.fitness
docs/: ARCHITECTURE.md  REFACTOR.md  RELEASE_CHECKLIST.md  RELEASE_SETUP.md  coding-style.md  quick-start.md  quickstart.md  release-guide.md
drizzle/: 0012_add_acp_session_execution_binding.sql  0012_add_session_branch.sql  0014_add_worktrees.sql  0018_add_task_creation_source.sql
drizzle-sqlite/: 0010_add_acp_session_execution_binding.sql  0010_add_session_branch.sql
e2e/: acp-chat.spec.ts  acp-process-output.spec.ts  (+11 more)
(+1620 files in other folders)
