[package]
name = "feature-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "feature_trace"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.20.0"
