[package]
name = "trace-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "trace_parser"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
feature-trace = { path = "../feature-trace" }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.20.0"
